# personal_portfolio_agent

./: .dockerignore  .gitignore  index.html  main.py  personal_portfolio_manager_agent.py  pyproject.toml  requirements.txt  script.js  styles.css
.github/workflows/: deploy-aci.yml
data/: Grouped_Stock_PnL_Summary.xlsx
src/: __init__.py  agent_logic.py  config.py  logger_setup.py  runner.py  utils.py
